FestinaLenteApp/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ActiveSince__c</fullName>
        <label>Active Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF (
    MONTH(TODAY()) &gt; MONTH(Birthdate),
    YEAR(TODAY()) - YEAR(Birthdate), 
    IF (AND(MONTH(TODAY()) = MONTH(Birthdate), DAY(TODAY()) &gt;= DAY(Birthdate)),
        YEAR(TODAY()) - YEAR(Birthdate),
        (YEAR(TODAY()) - YEAR(Birthdate)) - 1)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ColourCode__c</fullName>
        <label>Colour Code</label>
        <picklist>
            <picklistValues>
                <fullName>AliceBlue (#F0F8FF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AntiqueWhite (#FAEBD7)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aqua (#00FFFF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aquamarine (#7FFFD4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azure (#F0FFFF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beige (#F5F5DC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bisque (#FFE4C4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black (#000000)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlanchedAlmond (#FFEBCD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue (#0000FF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueViolet (#8A2BE2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brown (#A52A2A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BurlyWood (#DEB887)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CadetBlue (#5F9EA0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chartreuse (#7FFF00)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chocolate (#D2691E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coral (#FF7F50)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CornflowerBlue (#6495ED)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornsilk (#FFF8DC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson (#DC143C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyan (#00FFFF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkBlue (#00008B)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkCyan (#008B8B)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkGoldenRod (#B8860B)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkGray (#A9A9A9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkGrey (#A9A9A9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkGreen (#006400)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkKhaki (#BDB76B)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkMagenta (#8B008B)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkOliveGreen (#556B2F)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmergencyContactName__c</fullName>
        <label>Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmergencyContactPhone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EmergencyContactRelationship__c</fullName>
        <label>Contact Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <picklist>
            <picklistValues>
                <fullName>0.50 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.55 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.60 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.65 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.70 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.75 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.80 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.85 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.90 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.95 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.00 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.05 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.10 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.15 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.20 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.25 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.30 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.35 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.40 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.45 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.50 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.55 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.60 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.65 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.70 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.75 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.80 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.85 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.90 m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.95 m</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InactiveSince__c</fullName>
        <label>Inactive Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>B - Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI - Beginner Improver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I - Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI - Strong Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreferredHorse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Horse</label>
        <referenceTo>Horse__c</referenceTo>
        <relationshipLabel>Preferring Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecondEmergencyContactName__c</fullName>
        <label>Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondEmergencyContactPhone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SecondEmergencyContactRelationship__c</fullName>
        <label>Contact Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WaitingForClassType__c</fullName>
        <label>Waiting for Class Type</label>
        <picklist>
            <picklistValues>
                <fullName>Equine Facilitated Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pony Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Lesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Riding</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WaitingSince__c</fullName>
        <label>Waiting Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <picklist>
            <picklistValues>
                <fullName>10 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>85 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>95 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>105 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>115 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>135 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>145 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 st</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Client</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Coach</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllClients</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Client</value>
        </filters>
        <label>All Clients</label>
    </listViews>
    <listViews>
        <fullName>AllCoaches</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Coach</value>
        </filters>
        <label>All Coaches</label>
    </listViews>
    <namedFilters>
        <fullName>nf_01Ii0000000TRSPEA4_00Ni0000000hqUhEAI</fullName>
        <active>true</active>
        <errorMessage>Contact does not exist or is not a Coach.</errorMessage>
        <field>Class__c.Coach__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Coach</value>
        </filterItems>
        <infoMessage>Contact must be a Coach</infoMessage>
        <isOptional>false</isOptional>
        <name>Class_Coach</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000TRSZEA4_00Ni0000000hppvEAA</fullName>
        <active>true</active>
        <errorMessage>Contact does not exist or is not a Client.</errorMessage>
        <field>Booking__c.Client__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <infoMessage>Contact must be a Client</infoMessage>
        <isOptional>false</isOptional>
        <name>Booking_Client</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000TTetEAG_00Ni0000000hwHHEAY</fullName>
        <active>true</active>
        <errorMessage>Contact does not exist or is not a Client</errorMessage>
        <field>Filter__c.Client__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <infoMessage>Contact must be a Client</infoMessage>
        <isOptional>false</isOptional>
        <name>Filter_Client</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000TTetEAG_00Ni0000000hwHMEAY</fullName>
        <active>true</active>
        <errorMessage>Contact does not exist or is not a Coach</errorMessage>
        <field>Filter__c.Coach__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Coach</value>
        </filterItems>
        <infoMessage>Contact must be a Coach</infoMessage>
        <isOptional>false</isOptional>
        <name>Filter_Coach</name>
    </namedFilters>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Coach</fullName>
        <active>true</active>
        <label>Coach</label>
    </recordTypes>
</CustomObject>